# jcollections

./: LICENSE  pyproject.toml
jcollections/: __init__.py  invdict.py
test/: test_invdict.py
