[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jcollections"
version = "0.0.1"
authors = [
  { name="Jose Arce", email="arceyd@cs.uni-freiburg.de" },
]
description = "An extension to Python's collections package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/joseab10/jcollections"
Issues = "https://github.com/joseab10/jcollections/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jcollections*"]
exclude = []
namespaces = true